--- a/Store/Store/Store/Web.config
+++ b/Store/Store/Store/Web.config
@@ -8,6 +8,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="EFDbContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\chukm\Documents\Gadgets.mdf;Integrated Security=True;Connect Timeout=30;Initial Catalog=Gadgets;Integrated Security=True;Pooling=False" providerName="System.Data.SqlClient" /><add name="GadgetsEntities" connectionString="metadata=res://*/Gadgets.csdl|res://*/Gadgets.ssdl|res://*/Gadgets.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Gadgets.mdf;initial catalog=Gadgets;integrated security=True;pooling=False;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="GadgetsEntities1" connectionString="metadata=res://*/Gadgets.csdl|res://*/Gadgets.ssdl|res://*/Gadgets.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Gadgets.mdf;initial catalog=Gadgets;integrated security=True;pooling=False;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
