--- a/Store/Store/Store/Web.config
+++ b/Store/Store/Store/Web.config
@@ -18,6 +18,12 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <pages controlRenderingCompatibilityVersion="4.0">
+      <controls>
+        <add tagPrefix="GS" tagName="CategoryLinks" src="~/Controls/CategoryList.ascx"/>
+        <add tagPrefix="GS" tagName="CartSummary" src="~/Controls/CartSummary.ascx"/>
+      </controls>
+    </pages>
   </system.web>
   <system.codedom>
     <compilers>
